<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <parent>
    <groupId>de.ingrid</groupId>
    <artifactId>ingrid-releases-pom</artifactId>
    <version>6.0.0</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>ingrid-iplug-dsc</artifactId>
  <version>6.0.0</version>
  <packaging>jar</packaging>
  <name>InGrid iPlug DSC</name>
  <description>This iPlug indexes documents from a database and can be queried by the iBus.</description>

  <!-- ==================== Source Code Management ==================== -->
  <scm>
    <connection>scm:git:git@github.com:informationgrid/ingrid-iplug-dsc.git</connection>
    <developerConnection>scm:git:git@github.com:informationgrid/ingrid-iplug-dsc.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <!-- ==================== REPOSITORIES ==================== -->
  <repositories>
    <!-- Repo of parent pom needed, parent pom may not be installed locally yet -->
    <repository>
      <id>nexus</id>
      <name>Nexus Repo</name>
      <url>https://nexus.informationgrid.eu/repository/maven-public</url>
    </repository>
  </repositories>

  <!-- ==================== PROPERTIES ==================== -->
  <properties>
    <iplug.type>IPLUG_DSC</iplug.type>
    <java.version>17</java.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <!-- since spring 4.1 the quartz library 1.x is not supported anymore -->
    <spring.version>2.7.7</spring.version>
    <ingrid-base-webapp.version>6.0.0</ingrid-base-webapp.version>
    <log4j2.version>2.19.0</log4j2.version>
  </properties>

  <!-- ==================== DEPENDENCY MANAGEMENT ==================== -->
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.7.7</version>
      </dependency>
      <dependency>
        <!-- Import dependency management from Spring Boot -->
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>${spring.version}</version>
        <!-- <relativePath />-->
        <!-- lookup parent from repository -->
        <type>pom</type>
        <scope>import</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <!-- ==================== DEPENDENCIES ==================== -->
  <dependencies>
    <dependency>
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-iplug</artifactId>
      <version>6.0.0</version>
      <exclusions>
        <exclusion>
          <groupId>ant</groupId>
          <artifactId>ant</artifactId>
        </exclusion>
        <exclusion>
          <groupId>opensymphony</groupId>
          <artifactId>quartz</artifactId>
        </exclusion>
        <exclusion>
          <groupId>tomcat</groupId>
          <artifactId>jasper-compiler</artifactId>
        </exclusion>
        <exclusion>
          <groupId>tomcat</groupId>
          <artifactId>jasper-runtime</artifactId>
        </exclusion>
        <exclusion>
          <groupId>jetty</groupId>
          <artifactId>servlet-api</artifactId>
        </exclusion>
        <exclusion>
          <groupId>jetty</groupId>
          <artifactId>org.mortbay.jetty</artifactId>
        </exclusion>
        <exclusion>
          <artifactId>log4j</artifactId>
          <groupId>log4j</groupId>
        </exclusion>
        <exclusion>
          <artifactId>spring-security-crypto</artifactId>
          <groupId>org.springframework.security</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-base-webapp</artifactId>
      <version>${ingrid-base-webapp.version}</version>
    </dependency>
    <dependency>
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-base-webapp</artifactId>
      <version>${ingrid-base-webapp.version}</version>
      <classifier>res</classifier>
      <type>zip</type>
    </dependency>
    <dependency>
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-utils</artifactId>
      <version>6.0.0</version>
    </dependency>
    <dependency>
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-utils-geo</artifactId>
      <version>6.0.0</version>
    </dependency>
    <dependency>
      <groupId>commons-httpclient</groupId>
      <artifactId>commons-httpclient</artifactId>
      <version>3.1</version>
    </dependency>
    <dependency>
      <groupId>commons-fileupload</groupId>
      <artifactId>commons-fileupload</artifactId>
      <version>1.4</version>
    </dependency>

    <!-- JS support -->
    <dependency>
      <groupId>org.graalvm.js</groupId>
      <artifactId>js</artifactId>
      <version>22.2.0</version>
    </dependency>
    <dependency>
      <groupId>org.graalvm.js</groupId>
      <artifactId>js-scriptengine</artifactId>
      <version>22.2.0</version>
    </dependency>
    
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-dbcp2</artifactId>
      <version>2.9.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>8.0.30</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>ojdbc</groupId>
      <artifactId>ojdbc</artifactId>
      <version>14</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.5.0</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.dbunit</groupId>
      <artifactId>dbunit</artifactId>
      <version>2.7.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>2.7.1</version>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>4.8.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <!-- ==================== Build Configuration ==================== -->
  <build>
    <finalName>${project.artifactId}-${project.version}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
          </includes>
        </configuration>
      </plugin>

      <!-- Activate maven-assembly-plugin from release pom to build installer -->
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
      </plugin>
      <!--
        This plugin configures the git-flow for this project
      -->
      <plugin>
        <groupId>external.atlassian.jgitflow</groupId>
        <artifactId>jgitflow-maven-plugin</artifactId>
        <version>1.0-m5.1</version>
        <configuration>
          <defaultOriginUrl>https://github.com/informationgrid/ingrid-iplug-dsc</defaultOriginUrl>
          <noDeploy>true</noDeploy>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
